# AAC

./: CMakeLists.txt  README.md  correctTests.txt  main.cpp  sourcecode.txt
LexicalAnalyzer/: lexical_analyzer.cpp  lexical_analyzer.h
SyntaxAnalyzer/AST/: literalArray.h  literalBoolean.h  literalInteger.h  literalList.h  literalReal.h  literalRecord.h  literalString.h  memory.h  node.h  nodeBody.h  nodeDeclaration.h  nodeDeclarationFunction.h  nodeDeclarationVariable.h  nodeInvocation.h  nodeLiteral.h  nodeParameter.h
SyntaxAnalyzer/Parser/: ArithmeticParser.cpp  ArrayOpParser.cpp  AtomParser.cpp  BodyParser.cpp  ComparisonParsers.cpp  CondParser.cpp  DefineParser.cpp  ElementParser.cpp  ForListParser.cpp  ForParser.cpp  FunctionParser.cpp  LetParser.cpp  ListOpParser.cpp  ListParser.cpp  LiteralArrayParser.cpp  LiteralListParser.cpp  LiteralParser.cpp  LogicalOpParser.cpp  ParameterParser.cpp  Parser.cpp  Parser.h  PredicatesParser.cpp  ReadLineParser.cpp  RecordParser.cpp  ReturnParser.cpp  SetParser.cpp
SyntaxAnalyzer/Semantics/: Array.h  Boolean.h  Integer.h  List.h  Literal.h  Nothing.h  Real.h  Record.h  String.h
Token/: tokens.h
